<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="11dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_blue"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:importantForAccessibility="no"
                app:srcCompat="@drawable/money_piggy_bank_line_blue_background" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:padding="21dp"
                android:text="@string/app_name"
                android:textSize="24sp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/calcule_seus_investimentos"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor_inicial" />

        <EditText
            android:id="@+id/edtValorInicial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/valor_em_r_ex_1700_00"
            android:inputType="number|numberDecimal"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:importantForAutofill="no"
            android:text="@string/aplica_o_mensal" />

        <EditText
            android:id="@+id/edtAplicacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/ex_100_00"
            android:importantForAutofill="no"
            android:inputType="number|numberDecimal"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:importantForAutofill="no"
            android:text="@string/tempo_de_aplica_o" />

        <EditText
            android:id="@+id/edtTempo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/em_meses"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:importantForAutofill="no"
            android:text="@string/taxa" />

        <EditText
            android:id="@+id/edtTaxa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/ex_00_2"
            android:inputType="number|numberDecimal"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCalcular"

                android:layout_width="270dp"
                android:layout_height="wrap_content"

                android:background="@drawable/buttonshape"
                android:gravity="center"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/calcular"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>